--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -277,6 +277,12 @@
                   <li>
                     <a  class="unfinished" [routerLink]="['topics/valuetypereftype']" data-filter-item data-filter-name="valuetypereftype">valuetypereftype</a>
                   </li>
+                  <li>
+                    <a  class="unfinished" [routerLink]="['topics/pureimpurepipe']" data-filter-item data-filter-name="pureimpurepipe">pureimpurepipe</a>
+                  </li>
+                  <li>
+                    <a  class="unfinished" [routerLink]="['topics/pureimpurefunctions']" data-filter-item data-filter-name="pureimpurefunctions">pureimpurefunctions</a>
+                  </li>
                 </ul>
               </div>
             </li>
