--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -283,6 +283,18 @@
                   <li>
                     <a  class="unfinished" [routerLink]="['topics/pureimpurefunctions']" data-filter-item data-filter-name="pureimpurefunctions">pureimpurefunctions</a>
                   </li>
+                  <li>
+                    <a  class="unfinished" [routerLink]="['topics/passbyvalvsref']" data-filter-item data-filter-name="passbyvalvsref">passbyvalvsref</a>
+                  </li>
+                  <li>
+                    <a  class="unfinished" [routerLink]="['topics/callback']" data-filter-item data-filter-name="callback">callback</a>
+                  </li>
+                  <li>
+                    <a  class="unfinished" [routerLink]="['topics/scss']" data-filter-item data-filter-name="scss">scss</a>
+                  </li>
+                  <li>
+                    <a  class="unfinished" [routerLink]="['topics/thiskeyword']" data-filter-item data-filter-name="thiskeyword">thiskeyword</a>
+                  </li>
                 </ul>
               </div>
             </li>
