--- a/src/app/topics/primitvedatatype/primitvedatatype.component.html
+++ b/src/app/topics/primitvedatatype/primitvedatatype.component.html
@@ -2,5 +2,6 @@
     <div class="container-fluid default-bar">
       <h2>what is primitive data types in JS? please provide examples</h2>
       <hr>
+      <a href="https://medium.com/javascript-in-plain-english/javascript-interview-questions-you-need-to-know-part-ii-e1e49ea64bc3" target="_blank">I read this article here about primitive</a>
     </div>
 </main>
