--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -295,6 +295,15 @@
                   <li>
                     <a  class="unfinished" [routerLink]="['topics/thiskeyword']" data-filter-item data-filter-name="thiskeyword">thiskeyword</a>
                   </li>
+                  <li>
+                    <a  class="unfinished" [routerLink]="['topics/jitvsaot']" data-filter-item data-filter-name="jitvsaot">jitvsaot</a>
+                  </li>
+                  <li>
+                    <a  class="unfinished" [routerLink]="['topics/racecondition']" data-filter-item data-filter-name="racecondition">racecondition</a>
+                  </li>
+                  <li>
+                    <a  class="unfinished" [routerLink]="['topics/commonmodule']" data-filter-item data-filter-name="commonmodule">commonmodule</a>
+                  </li>
                 </ul>
               </div>
             </li>
