--- a/src/app/topics/hoisting/hoisting.component.html
+++ b/src/app/topics/hoisting/hoisting.component.html
@@ -1,6 +1,7 @@
 <main class="page-content">
     <div class="container-fluid default-bar">
-      <h2>what is hoisting in angular? what are their practical usage? please provide examples</h2>
+      <h2>what is hoisting and scopes in JS? what are their practical usage? please provide examples</h2>
       <hr>
+      <a href="https://medium.com/backticks-tildes/understanding-hoisting-and-scoping-in-javascript-39ea7b41e31">I read it here</a>
     </div>
 </main>
