--- a/src/app/topics/observable-vs-promise/observable-vs-promise.component.html
+++ b/src/app/topics/observable-vs-promise/observable-vs-promise.component.html
@@ -10,6 +10,7 @@
           <ul>
               <li><a href="https://itnext.io/javascript-promises-vs-rxjs-observables-de5309583ca2" target="_blank">itnext</a></li>
               <li><a href="https://medium.com/javascript-everyday/javascript-theory-promise-vs-observable-d3087bc1239a" target="_blank">medium</a></li>
+              <li><a href="https://levelup.gitconnected.com/rxjs-a-deep-dive-with-angular-8-7fe9fd675aaa" target="_blank">medium</a></li>
           </ul>
         </div>
       </div>
