--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -304,6 +304,28 @@
                   <li>
                     <a  class="unfinished" [routerLink]="['topics/commonmodule']" data-filter-item data-filter-name="commonmodule">commonmodule</a>
                   </li>
+
+                  <li>
+                    <a  class="unfinished" [routerLink]="['topics/hostlistnerbinding']" data-filter-item data-filter-name="hostlistnerbinding">hostlistnerbinding</a>
+                  </li>
+                  <li>
+                    <a  class="unfinished" [routerLink]="['topics/ngzone']" data-filter-item data-filter-name="ngzone">ngzone</a>
+                  </li>
+                  <li>
+                    <a  class="unfinished" [routerLink]="['topics/render2']" data-filter-item data-filter-name="render2">render2</a>
+                  </li>
+                  <li>
+                    <a  class="unfinished" [routerLink]="['topics/routeguard']" data-filter-item data-filter-name="routeguard">routeguard</a>
+                  </li>
+                  <li>
+                    <a  class="unfinished" [routerLink]="['topics/smartdumbcomponent']" data-filter-item data-filter-name="smartdumbcomponent">smartdumbcomponent</a>
+                  </li>
+                  <li>
+                    <a  class="unfinished" [routerLink]="['topics/templaterefvarible']" data-filter-item data-filter-name="templaterefvarible">templaterefvarible</a>
+                  </li>
+                  <li>
+                    <a  class="unfinished" [routerLink]="['topics/viewchildcontentchild']" data-filter-item data-filter-name="viewchildcontentchild">viewchildcontentchild</a>
+                  </li>
                 </ul>
               </div>
             </li>
