--- a/src/app/topics/pureimpurepipe/pureimpurepipe.component.html
+++ b/src/app/topics/pureimpurepipe/pureimpurepipe.component.html
@@ -1,6 +1,7 @@
 <main class="page-content">
     <div class="container-fluid default-bar">
       <h2>what is pure and impure pipes? what are their practical usage? please provide examples</h2>
+      <a href="https://medium.com/bb-tutorials-and-thoughts/angular-understanding-pipes-and-different-ways-to-use-them-cb5e9e43dcd4" target="_blank">I read this article here</a>
       <hr>
     </div>
 </main>
