--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -326,6 +326,9 @@
                   <li>
                     <a  class="unfinished" [routerLink]="['topics/viewchildcontentchild']" data-filter-item data-filter-name="viewchildcontentchild">viewchildcontentchild</a>
                   </li>
+                  <li>
+                    <a  class="unfinished" [routerLink]="['topics/asyncperformance']" data-filter-item data-filter-name="asyncperformance">asyncperformance</a>
+                  </li>
                 </ul>
               </div>
             </li>
