Added new topic details

--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -206,25 +206,25 @@
                     <a [routerLink]="['topics/angulardigestcycle']" data-filter-item data-filter-name="goodpractices">Angular Digest Cycle</a>
                   </li>    
                   <li>
-                    <a  class="unfinished" [routerLink]="['topics/classvsproto']" data-filter-item data-filter-name="classvsproto">class vs prototype inheritance</a>
+                    <a [routerLink]="['topics/classvsproto']" data-filter-item data-filter-name="class vs prototype inheritance">class vs prototype inheritance</a>
                   </li>  
                   <li>
-                    <a  class="unfinished" [routerLink]="['topics/dcovsanotation']" data-filter-item data-filter-name="dcovsanotation">Decorator vs Annotations</a>
+                    <a [routerLink]="['topics/dcovsanotation']" data-filter-item data-filter-name="decorator vs annotations">Decorator vs Annotations</a>
                   </li> 
                   <li>
-                    <a  class="unfinished" [routerLink]="['topics/diffprog']" data-filter-item data-filter-name="diffprog">Diffeance between Programming Lang</a>
+                    <a [routerLink]="['topics/diffprog']" data-filter-item data-filter-name="programming lang">Difference between Programming Lang</a>
                   </li> 
                   <li>
-                    <a  class="unfinished" [routerLink]="['topics/diffbinding']" data-filter-item data-filter-name="dcovsanotation">Diffeant Binding Expressions</a>
+                    <a [routerLink]="['topics/diffbinding']" data-filter-item data-filter-name="binding expressions">Difference Binding Expressions</a>
                   </li> 
                   <li>
-                    <a  class="unfinished" [routerLink]="['topics/diffconstvsfactory']" data-filter-item data-filter-name="dcovsanotation">Diffeance between Constructor and factory</a>
+                    <a [routerLink]="['topics/diffconstvsfactory']" data-filter-item data-filter-name="Constructor factory">Difference between Constructor and factory</a>
                   </li> 
                   <li>
-                    <a  class="unfinished" [routerLink]="['topics/functionalbinding']" data-filter-item data-filter-name="functionalbinding">Diffeant Functional Binding</a>
+                    <a  class="unfinished" [routerLink]="['topics/functionalbinding']" data-filter-item data-filter-name="Functional Binding">Difference Functional Binding</a>
                   </li> 
                   <li>
-                    <a  class="unfinished" [routerLink]="['topics/hoisting']" data-filter-item data-filter-name="functionalbinding">Hoisitng</a>
+                    <a  class="unfinished" [routerLink]="['topics/hoisting']" data-filter-item data-filter-name="Hoisitng">Hoisitng</a>
                   </li> 
                   <li>
                     <a  class="unfinished" [routerLink]="['topics/loadash']" data-filter-item data-filter-name="loadash">Lodash</a>
