--- a/src/app/topics/decoratorvsannotations/decoratorvsannotations.component.html
+++ b/src/app/topics/decoratorvsannotations/decoratorvsannotations.component.html
@@ -2,5 +2,21 @@
     <div class="container-fluid default-bar">
       <h2>What is differance between decorator vs annotations ? What is Practical Use of it? Please Provide Examples</h2>
       <hr>
+
+      <h5>Annotations:</h5>
+      <p>This are hard-coded language feature. Annotations are only metadata set on the class that is used to reflect the metadata library. When user annotates a class, the compiler creates an attribute on that class called annotations, stores an annotation array in it, then tries to instantiate an object with the same name as the annotation, passing the metadata into the constructor. Annotations are not predefined in AngularJs so we can name them on our own.
+      e.g. @ComponentAnnotation
+      </p>
+      <h5>Decorators:</h5>
+      <p>A decorator is a function that adds metadata to a class, its members, or its method arguments. A decorator is just a function that gives you access to the target that needs to be decorated.
+      </p>
+     
+      <h3 class="mt-4">Usefull links:</h3>
+      <hr>
+      <ul>
+          <li><a href="https://www.geeksforgeeks.org/what-are-the-differences-between-an-annotation-and-a-decorator-in-angular/" target="_blank">geeksforgeeks</a></li>
+          <li><a href="https://blog.thoughtram.io/angular/2015/05/03/the-difference-between-annotations-and-decorators.html" target="_blank">thoughtram</a></li>
+      </ul>
+
     </div>
 </main>
