--- a/src/app/topics/differancebetweenprogramminglang/differancebetweenprogramminglang.component.html
+++ b/src/app/topics/differancebetweenprogramminglang/differancebetweenprogramminglang.component.html
@@ -2,5 +2,13 @@
     <div class="container-fluid default-bar">
       <h2>What is differance between functional and object oriented programming ? What is differance between imperative vs declarative programming? Please Provide Examples</h2>
       <hr>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/K_g_xUtydpg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/H3dEUJlqth4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <h3 class="mt-4">Usefull links:</h3>
+      <hr>
+      <ul>
+          <li><a href="https://academind.com/learn/javascript/functional-vs-oop-vs-procedural/" target="_blank">academind</a></li>
+          <li><a href="https://medium.com/javascript-scene/master-the-javascript-interview-what-is-functional-programming-7f218c68b3a0" target="_blank">medium</a></li>
+      </ul>
     </div>
 </main>
