--- a/src/app/topics/differentbindingexpression/differentbindingexpression.component.html
+++ b/src/app/topics/differentbindingexpression/differentbindingexpression.component.html
@@ -2,5 +2,16 @@
     <div class="container-fluid default-bar">
       <h2>What are different binding expression in angular ? What is Practical Use of it? Please Provide Examples</h2>
       <hr>
+
+      <p>Data-binding in AngularJS apps is the automatic synchronization of data between the model and view components. The way that AngularJS implements data-binding lets you treat the model as the single-source-of-truth in your application.
+      </p>
+      
+      <h3 class="mt-4">Usefull links:</h3>
+      <hr>
+      <ul>
+          <li><a href="https://blog.eduonix.com/web-programming-tutorials/learn-different-types-data-bindings-angular-2/" target="_blank">eduonix</a></li>
+          <li><a href="https://docs.angularjs.org/guide/expression#:~:text=AngularJS%20expressions%20are%20JavaScript-like,1+2" target="_blank">angularjs</a></li>
+      </ul>
+
     </div>
 </main>
