--- a/src/app/topics/diffranceconstructorvsfactory/diffranceconstructorvsfactory.component.html
+++ b/src/app/topics/diffranceconstructorvsfactory/diffranceconstructorvsfactory.component.html
@@ -2,5 +2,20 @@
     <div class="container-fluid default-bar">
       <h2>What is differance between constructor and factory for creating objects ? What is Practical Use of it? Please Provide Examples</h2>
       <hr>
+
+      <h5>Factory functions:</h5>
+      <p>A factory function is any function which is not a class or constructor that returns a (presumably new) object. In JavaScript, any function can return an object. When it does so without the new keyword, it’s a factory function.</p>
+      
+      <h5>Constructor Functions:</h5>
+      <p>As opposed to the constructor functions they differ only from its use case and a convention. Other than that factory functions and constructor functions are similar. The convention of defining a constructor function is to use capitalize function name to denote that this is a constructor function, the use case of this function is that creating similar types of objects with the new keyword, then later we can do instance checks using theinstanceof keyword in JavaScript.</p>
+
+
+      <h3 class="mt-4">Usefull links:</h3>
+      <hr>
+      <ul>
+          <li><a href="https://medium.com/javascript-scene/javascript-factory-functions-vs-constructor-functions-vs-classes-2f22ceddf33e" target="_blank">medium</a></li>
+          <li><a href="https://medium.com/@chamikakasun/javascript-factory-functions-vs-constructor-functions-585919818afe" target="_blank">medium</a></li>
+      </ul>
+
     </div>
 </main>
