--- a/src/app/topics/classicalvsproptypal/classicalvsproptypal.component.html
+++ b/src/app/topics/classicalvsproptypal/classicalvsproptypal.component.html
@@ -2,5 +2,19 @@
     <div class="container-fluid default-bar">
       <h2>What is differance between classical and prototypal inheritance ? What is Practical Use of it? Please Provide Examples</h2>
       <hr>
+      <h5>Classical Inheritance:</h5>
+      <p>In Classical Inheritance, Objects are still abstractions of real world 'things', but we can only refer to Objects through Classes. Classes are a Generalization of an object. In other words, Classes are an abstraction of an object of a real world thing. (Classes, then, are an abstraction of an abstraction of a real-world thing). Since a Class is yet another reference to (or abstraction of) its predecessor, each descendant child Class increases the level of abstraction, thus increasing the level of generalization.      </p>
+
+      <h5>Prototypal Inheritance:</h5>
+      <p>As opposed to Classical Inheritance, Prototypal Inheritance does not deal with increasing layers of abstraction. An Object is either an abstraction of a real-world thing, same as before, or is a direct copy of another Object (in other words, a Prototype). Objects can be created from thin air, or they can be created from other objects:
+
+      </p>
+     
+      <h3 class="mt-4">Usefull links:</h3>
+      <hr>
+      <ul>
+          <li><a href="https://medium.com/javascript-scene/master-the-javascript-interview-what-s-the-difference-between-class-prototypal-inheritance-e4cd0a7562e9" target="_blank">medium</a></li>
+          <li><a href="https://coryrylan.com/blog/javascript-prototypal-inheritance" target="_blank">coryrylan</a></li>
+      </ul>
     </div>
 </main>
