--- a/src/app/topics/functionalbinding/functionalbinding.component.html
+++ b/src/app/topics/functionalbinding/functionalbinding.component.html
@@ -2,5 +2,15 @@
     <div class="container-fluid default-bar">
       <h2>what is funcational binding in angular? what are their practical usage? please provide examples</h2>
       <hr>
+
+      <p>The bind() method creates a new function that, when called, has its this keyword set to the provided value, with a given sequence of arguments preceding any provided when the new function is called.</p>
+
+      <h3 class="mt-4">Usefull links:</h3>
+      <hr>
+      <ul>
+          <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_objects/Function/bind" target="_blank">developer.mozilla</a></li>
+          <li><a href="https://javascript.info/bind" target="_blank">thoughtram</a></li>
+      </ul>
+
     </div>
 </main>
