--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -329,6 +329,19 @@
                   <li>
                     <a  class="unfinished" [routerLink]="['topics/asyncperformance']" data-filter-item data-filter-name="asyncperformance">asyncperformance</a>
                   </li>
+                  <li>
+                    <a  class="unfinished" [routerLink]="['topics/differencengcontent']" data-filter-item data-filter-name="differencengcontent">difference:ngcontent,ng-container,ng-template</a>
+                  </li>
+                  <li>
+                    <a  class="unfinished" [routerLink]="['topics/reactiveform']" data-filter-item data-filter-name="reactiveform">reactiveform - validations</a>
+                  </li>
+                  <li>
+                    <a  class="unfinished" [routerLink]="['topics/providedin']" data-filter-item data-filter-name="providedin">providedin</a>
+                  </li>
+                  <li>
+                    <a  class="unfinished" [routerLink]="['topics/forchildforroot']" data-filter-item data-filter-name="forchildforroot">forchildforroot</a>
+                  </li>
+      
                 </ul>
               </div>
             </li>
