--- a/src/app/topics/questions/questions.component.html
+++ b/src/app/topics/questions/questions.component.html
@@ -2,5 +2,13 @@
     <div class="container-fluid default-bar">
       <h2>why should always avoid === or == floating point numbers. Instead use if (abs(x - y) < toleranceValue)  .</h2>
       <hr>
+      <div>
+        <h2> When can you omit the brackets in template binding?</h2>
+        <a href="https://stackoverflow.com/questions/42977101/angular-2-difference-between-property-binding-with-and-without-brackets" target="_blank">I read this article here</a>
+      </div>
+      <div>
+        <h2> What are some ways you may improve your website's scrolling performance?</h2>
+        <a href="https://medium.com/@kulor/one-small-css-hack-to-improve-scrolling-performance-c5238029e518" target="_blank">I read this article here</a>
+      </div>
     </div>
 </main>
