--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -341,6 +341,12 @@
                   <li>
                     <a  class="unfinished" [routerLink]="['topics/forchildforroot']" data-filter-item data-filter-name="forchildforroot">forchildforroot</a>
                   </li>
+                  <li>
+                    <a  class="unfinished" [routerLink]="['topics/routeroutlet']" data-filter-item data-filter-name="routeroutlet">routeroutlet</a>
+                  </li>
+                  <li>
+                    <a  class="unfinished" [routerLink]="['topics/routerstatevsactivatedroute']" data-filter-item data-filter-name="routerstatevsactivatedroute">routerstatevsactivatedroute</a>
+                  </li>
       
                 </ul>
               </div>
