--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -347,7 +347,9 @@
                   <li>
                     <a  class="unfinished" [routerLink]="['topics/routerstatevsactivatedroute']" data-filter-item data-filter-name="routerstatevsactivatedroute">routerstatevsactivatedroute</a>
                   </li>
-      
+                  <li>
+                    <a  class="unfinished" [routerLink]="['topics/incrementalvsvirtualdom']" data-filter-item data-filter-name="incrementalvsvirtualdom">incrementalvsvirtualdom</a>
+                  </li>
                 </ul>
               </div>
             </li>
