--- a/src/app/topics/angulardigestcycle/angulardigestcycle.component.html
+++ b/src/app/topics/angulardigestcycle/angulardigestcycle.component.html
@@ -15,6 +15,7 @@
       <ul>
           <li><a href="https://www.dotsquares.com/news_events/what-is-digest-cycle-in-angular-js-and-how-does-it-make-two-way-data-binding-possible/#:~:text=Digest%20cycle%20is%20what%20Angular,the%20code%20encounters%20a%20directive." target="_blank">dotsquares</a></li>
           <li><a href="https://www.sitepoint.com/understanding-angulars-apply-digest/" target="_blank">sitepoint</a></li>
+          <li><a href="https://indepth.dev/angulars-digest-is-reborn-in-the-newer-version-of-angular/" target="_blank">angular digest cycle article</a></li>
       </ul>
 
     </div>
