Added topic explanations

--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -221,31 +221,31 @@
                     <a [routerLink]="['topics/diffconstvsfactory']" data-filter-item data-filter-name="Constructor factory">Difference between Constructor and factory</a>
                   </li> 
                   <li>
-                    <a  class="unfinished" [routerLink]="['topics/functionalbinding']" data-filter-item data-filter-name="Functional Binding">Difference Functional Binding</a>
+                    <a [routerLink]="['topics/functionalbinding']" data-filter-item data-filter-name="Functional Binding">Difference Functional Binding</a>
                   </li> 
                   <li>
-                    <a  class="unfinished" [routerLink]="['topics/hoisting']" data-filter-item data-filter-name="Hoisitng">Hoisitng</a>
+                    <a [routerLink]="['topics/hoisting']" data-filter-item data-filter-name="Hoisitng">Hoisitng</a>
                   </li> 
                   <li>
-                    <a  class="unfinished" [routerLink]="['topics/loadash']" data-filter-item data-filter-name="loadash">Lodash</a>
+                    <a [routerLink]="['topics/loadash']" data-filter-item data-filter-name="loadash">Lodash</a>
                   </li> 
                   <li>
-                    <a  class="unfinished" [routerLink]="['topics/ngx-logger']" data-filter-item data-filter-name="ngx-logger">NGX-Logger</a>
+                    <a [routerLink]="['topics/ngx-logger']" data-filter-item data-filter-name="ngx-logger">NGX-Logger</a>
                   </li> 
                   <li>
-                    <a  class="unfinished" [routerLink]="['topics/scope']" data-filter-item data-filter-name="ngx-logger">Scope Hierarchy</a>
+                    <a [routerLink]="['topics/scope']" data-filter-item data-filter-name="scope">Scope Hierarchy</a>
                   </li> 
                   <li>
-                    <a  class="unfinished" [routerLink]="['topics/serviceworker']" data-filter-item data-filter-name="ngx-logger">Service Worker</a>
+                    <a [routerLink]="['topics/serviceworker']" data-filter-item data-filter-name="service-worker">Service Worker</a>
                   </li> 
                   <li>
-                    <a  class="unfinished" [routerLink]="['topics/cachehttp']" data-filter-item data-filter-name="cachehttp">Cache Http</a>
+                    <a [routerLink]="['topics/cachehttp']" data-filter-item data-filter-name="cachehttp">Cache Http</a>
                   </li>
                   <li>
-                    <a  class="unfinished" [routerLink]="['topics/collectiongenerators']" data-filter-item data-filter-name="collectiongenerators">collectiongenerators</a>
+                    <a [routerLink]="['topics/collectiongenerators']" data-filter-item data-filter-name="collectiongenerators">collectiongenerators</a>
                   </li>
                   <li>
-                    <a  class="unfinished" [routerLink]="['topics/datastructures']" data-filter-item data-filter-name="datastructures">datastructures</a>
+                    <a [routerLink]="['topics/datastructures']" data-filter-item data-filter-name="datastructures">datastructures</a>
                   </li>
                   <li>
                     <a  class="unfinished" [routerLink]="['topics/differentmethods']" data-filter-item data-filter-name="differentmethods">differentmethods</a>
@@ -263,7 +263,7 @@
                     <a  class="unfinished" [routerLink]="['topics/higherorderfunctions']" data-filter-item data-filter-name="higherorderfunctions">higherorderfunctions</a>
                   </li> 
                   <li>
-                    <a  class="unfinished" [routerLink]="['topics/primitvedatatype']" data-filter-item data-filter-name="primitvedatatype">primitvedatatype</a>
+                    <a [routerLink]="['topics/primitvedatatype']" data-filter-item data-filter-name="primitvedatatype">primitvedatatype</a>
                   </li> 
                   <li>
                     <a  class="unfinished" [routerLink]="['topics/promiseall']" data-filter-item data-filter-name="promiseall">promiseall</a>
