--- a/src/app/topics/collectionsgeneratirs/collectionsgeneratirs.component.html
+++ b/src/app/topics/collectionsgeneratirs/collectionsgeneratirs.component.html
@@ -2,5 +2,8 @@
     <div class="container-fluid default-bar">
       <h2>example of collections and generators in angular? what are their practical usage? please provide examples</h2>
       <hr>
+
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/IFqC9954BDc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
     </div>
 </main>
