--- a/src/app/topics/lodash/lodash.component.html
+++ b/src/app/topics/lodash/lodash.component.html
@@ -2,5 +2,28 @@
     <div class="container-fluid default-bar">
       <h2>What is loadash ? What is Practical Use of it? Please Provide Examples</h2>
       <hr>
+
+      <p>
+        Lodash is a modern JavaScript utility library delivering modularity, performance & extras.
+      </p>
+      <p>Lodash makes JavaScript easier by taking the hassle out of working with arrays, numbers, objects, strings, etc.</p>
+      <p>Lodash’s modular methods are great for:</p>
+      <ul>
+        <li>Iterating arrays, objects, & strings</li>
+        <li>Manipulating & testing values</li>
+        <li>Creating composite functions</li>
+      </ul>
+
+      <h3 class="mt-4">Hands-on link:</h3>
+          <hr>
+          <a href="https://stackblitz.com/edit/angular-lodash" target="_blank">stackblitz</a><br />
+          <a href="https://stackblitz.com/edit/lodash" target="_blank">stackblitz</a>
+      <h3 class="mt-4">Usefull links:</h3>
+      <hr>
+      <ul>
+          <!-- <li><a href="https://scotch.io/tutorials/understanding-hoisting-in-javascript#:~:text=Hoisting%20is%20a%20JavaScript%20mechanism,scope%20is%20global%20or%20local." target="_blank">scotch.io</a></li> -->
+          <li><a href="https://lodash.com/" target="_blank">lodash</a></li>
+      </ul>
+
     </div>
 </main>
