--- a/src/app/topics/ngx-logger/ngx-logger.component.html
+++ b/src/app/topics/ngx-logger/ngx-logger.component.html
@@ -2,5 +2,28 @@
     <div class="container-fluid default-bar">
       <h2>What is ngx-logger ? What is Practical Use of it? Please Provide Examples</h2>
       <hr>
+
+      <p>
+        NGX Logger is a simple logging module for angular (currently supports angular 6+). It allows "pretty print" to the console, as well as allowing log messages to be POSTed to a URL for server-side logging.
+      </p>
+      <p>Lodash makes JavaScript easier by taking the hassle out of working with arrays, numbers, objects, strings, etc.</p>
+      <p>Lodash’s modular methods are great for:</p>
+      <ul>
+        <li>Iterating arrays, objects, & strings</li>
+        <li>Manipulating & testing values</li>
+        <li>Creating composite functions</li>
+      </ul>
+     
+      <h3 class="mt-4">Hands-on link:</h3>
+          <hr>
+          <a href="https://stackblitz.com/edit/angular-ngxlogger" target="_blank">stackblitz</a><br />
+          <a href="https://stackblitz.com/edit/angular-ngx-logger" target="_blank">stackblitz</a>
+      <h3 class="mt-4">Usefull links:</h3>
+      <hr>
+      <ul>
+          <li><a href="https://www.npmjs.com/package/ngx-logger" target="_blank">npm</a></li>
+          <li><a href="https://github.com/dbfannin/ngx-logger" target="_blank">github</a></li>
+      </ul>
+
     </div>
 </main>
