--- a/src/app/topics/scopehierarchy/scopehierarchy.component.html
+++ b/src/app/topics/scopehierarchy/scopehierarchy.component.html
@@ -2,5 +2,21 @@
     <div class="container-fluid default-bar">
       <h2>What is scope hierachy in angular ? What is Practical Use of it? Please Provide Examples</h2>
       <hr>
+
+      <p>
+        This is part of angular 1. $scope concept is replaced with module based architecure in angular 2+. Please go through the link if you still want to know about this.
+      </p>
+      
+          <!-- <h3 class="mt-4">Hands-on link:</h3>
+          <hr>
+          <a href="https://stackblitz.com/edit/angular-ngxlogger" target="_blank">stackblitz</a><br />
+          <a href="https://stackblitz.com/edit/angular-ngx-logger" target="_blank">stackblitz</a>
+      <h3 class="mt-4">Usefull links:</h3> -->
+      <hr>
+      <ul>
+          <li><a href="https://angular.io/guide/hierarchical-dependency-injection" target="_blank">angular</a></li>
+          <li><a href="https://www.tutorialsteacher.com/angularjs/angularjs-scope" target="_blank">tutorialsteacher</a></li>
+      </ul>
+
     </div>
 </main>
