--- a/src/app/topics/serviceworker/serviceworker.component.html
+++ b/src/app/topics/serviceworker/serviceworker.component.html
@@ -2,5 +2,22 @@
     <div class="container-fluid default-bar">
       <h2>What is service worker in angular ? What is Practical Use of it? Please Provide Examples</h2>
       <hr>
+
+      <p>
+        Service workers augment the traditional web deployment model and empower applications to deliver a user experience with the reliability and performance on par with natively-installed code. Adding a service worker to an Angular application is one of the steps for turning an application into a Progressive Web App (also known as a PWA).
+      </p>
+      <p>Service workers function as a network proxy. They intercept all outgoing HTTP requests made by the application and can choose how to respond to them. For example, they can query a local cache and deliver a cached response if one is available. Proxying isn't limited to requests made through programmatic APIs, such as fetch; it also includes resources referenced in HTML and even the initial request to index.html. Service worker-based caching is thus completely programmable and doesn't rely on server-specified caching headers.
+      </p>
+        
+      <h3 class="mt-4">Hands-on link:</h3>
+          <hr>
+          <a href="https://stackblitz.com/edit/service-worker" target="_blank">stackblitz</a><br />
+      <h3 class="mt-4">Usefull links:</h3>
+      <hr>
+      <ul>
+          <li><a href="https://angular.io/guide/service-worker-intro" target="_blank">angular.io</a></li>
+          <li><a href="https://angular.io/api/service-worker" target="_blank">angular.io</a></li>
+      </ul>
+
     </div>
 </main>
