--- a/src/app/topics/primitvedatatype/primitvedatatype.component.html
+++ b/src/app/topics/primitvedatatype/primitvedatatype.component.html
@@ -1,7 +1,21 @@
 <main class="page-content">
-    <div class="container-fluid default-bar">
-      <h2>what is primitive data types in JS? please provide examples</h2>
-      <hr>
-      <a href="https://medium.com/javascript-in-plain-english/javascript-interview-questions-you-need-to-know-part-ii-e1e49ea64bc3" target="_blank">I read this article here about primitive</a>
-    </div>
+  <div class="container-fluid default-bar">
+    <h2>what is primitive data types in JS? please provide examples</h2>
+    <hr>
+    <p>
+      A primitive (primitive value, primitive data type) is data that is not an object and has no methods. In
+      JavaScript, there are 6 primitive data types: string, number, boolean, null, undefined, symbol (new in ECMAScript
+      2015).
+    </p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/9ooYYRLdg_g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/qw3j0A3DIzQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    <h3 class="mt-4">Usefull links:</h3>
+    <hr>
+    <ul>
+      <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures" target="_blank">developer.mozilla</a></li>
+      <li><a href="https://developer.mozilla.org/en-US/docs/Glossary/Primitive"
+          target="_blank">developer.mozilla</a></li>
+    </ul>
+  </div>
 </main>
