added new components

--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -350,6 +350,24 @@
                   <li>
                     <a  class="unfinished" [routerLink]="['topics/incrementalvsvirtualdom']" data-filter-item data-filter-name="incrementalvsvirtualdom">incrementalvsvirtualdom</a>
                   </li>
+                  <li>
+                    <a  class="unfinished" [routerLink]="['topics/bootstrapping']" data-filter-item data-filter-name="bootstrapping">bootstrapping</a>
+                  </li>
+                  <li>
+                    <a  class="unfinished" [routerLink]="['topics/callapplyjs']" data-filter-item data-filter-name="callapplyjs">callapplyjs</a>
+                  </li>
+                  <li>
+                    <a  class="unfinished" [routerLink]="['topics/debouncevsthrottle']" data-filter-item data-filter-name="debouncevsthrottle">debouncevsthrottle</a>
+                  </li>
+                  <li>
+                    <a  class="unfinished" [routerLink]="['topics/rxjsex']" data-filter-item data-filter-name="rxjsex">rxjsex</a>
+                  </li>
+                  <li>
+                    <a  class="unfinished" [routerLink]="['topics/solid']" data-filter-item data-filter-name="solid">solid</a>
+                  </li>
+                  <li>
+                    <a  class="unfinished" [routerLink]="['topics/transducers']" data-filter-item data-filter-name="transducers">transducers</a>
+                  </li>
                 </ul>
               </div>
             </li>
