--- a/src/app/topics/datastructures/datastructures.component.html
+++ b/src/app/topics/datastructures/datastructures.component.html
@@ -1,6 +1,7 @@
 <main class="page-content">
     <div class="container-fluid default-bar">
       <h2>example of data-structures in angular? what are their practical usage? please provide examples</h2>
+      <a href="https://medium.com/better-programming/8-common-data-structures-in-javascript-3d3537e69a27" target="_blank">I read this article here</a>
       <hr>
     </div>
 </main>
